--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Protected App</title>
 </head>
 <body>
-  <h1>Protected App</h1>
-  <p id="note">北美静心联合会 人员信息管理系统</p>
+  <h1>北美静心联合会</h1>
+  <p id="note">人员信息管理系统</p>
 
   <!-- 搜索输入 -->
   <input id="inputBox" placeholder="请输入查询内容" />
