--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <h1>Member Lookup</h1>
 
-  <div id="authBox">
+  <!--<div id="authBox">
     <div style="margin-bottom:8px">使用邮箱登录（magic link）：</div>
     <div class="controls">
       <input id="email" type="email" placeholder="you@example.com" />
@@ -35,7 +35,7 @@
       <div>
         <button id="signOut">Sign out</button>
       </div>
-    </div>
+    </div> -->
 
     <div class="card">
       <div style="margin-bottom:8px">输入查询字符串（会传给 RPC 的参数 `info`）：</div>
